fixxed github logo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   </center>
 
-  <div class="container">
+  <div class="links">
     <footer>
       <a href="https://github.com/PLSDSchoolMeme">
         <img src="/assets/images/icons/GitHub-Mark-Light-32px.png" class="logo" alt="Github">
