--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
 
   </center>
 
-  <div class="links">
-    <footer>
-      <a href="https://github.com/PLSDSchoolMeme">
-        <img src="/assets/images/icons/GitHub-Mark-Light-32px.png" class="logo" alt="Github">
-      </a>
-      <!-- <div class="twitter">
-        <a href="https://twitter.com/PickschoolMemes">
-          <img src="assets/images/icons/Twitter social icons - circle - blue.svg" class="logo" alt="Twitter">
+  <div class="links" style="display:inline-block;">
+      <footer>
+        <a href="https://github.com/PLSDSchoolMeme">
+          <img src="/assets/images/icons/GitHub-Mark-Light-32px.png" class="logo" alt="Github">
         </a>
-      </div> -->
-    </footer>
+        <div class="twitter" style="display:inline-block;">
+          <a href="https://twitter.com/PickschoolMemes">
+            <img src="/assets/images/icons/TWITTER_icon-icons.com_65536.png" class="logo" alt="Twitter">
+          </a>
+        </div>
+      </footer>
   </div>
 </body>
 
