added in instagram logo to footer

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -50,16 +49,19 @@
           us through Twitter or Instagram DMs of Pickerington school memes or any of our associates who have agreed to
           cosign this letter or through Admin@plsdschoolmeme.com to coordinate a time and place. We look forward to
           working with you to make PLSD a better place for everyone.</p>
-        <div class="links-to-groups">    
+        <div class="links-to-groups">
           <p style="text-align: center;">-Regards</p>
-          <p style="text-align: center;"><a href="https://www.instagram.com/pickeringtonschoolmemes/">Pickerington School memes</a>
-          <p style="text-align: center;"><a href="https://www.instagram.com/pickeringtonstudentunion/">Pickerington student union</a>
-          <p style="text-align: center;"><a href="https://www.instagram.com/pcmh_official/">Pickerington coalition for mental health</a>
+          <p style="text-align: center;"><a href="https://www.instagram.com/pickeringtonschoolmemes/">Pickerington
+              School memes</a>
+          <p style="text-align: center;"><a href="https://www.instagram.com/pickeringtonstudentunion/">Pickerington
+              student union</a>
+          <p style="text-align: center;"><a href="https://www.instagram.com/pcmh_official/">Pickerington coalition for
+              mental health</a>
         </div>
       </span>
       </p>
     </div>
-<!--
+    <!--
     <p>If you would like to sign the letter leave your name here.<br></p>
     <form method="POST" action="/assets/pages/php/submit.php">
       <div class="form_name">
@@ -72,16 +74,17 @@
   </center>
 
   <div class="links" style="display:inline-block;">
-      <footer>
-        <a href="https://github.com/PLSDSchoolMeme">
-          <img src="/assets/images/icons/GitHub-Mark-Light-32px.png" class="logo" alt="Github">
-        </a>
-        <div class="twitter" style="display:inline-block;">
-          <a href="https://twitter.com/PickschoolMemes">
-            <img src="/assets/images/icons/TWITTER_icon-icons.com_65536.png" class="logo" alt="Twitter">
-          </a>
-        </div>
-      </footer>
+    <footer>
+      <a href="https://github.com/PLSDSchoolMeme">
+        <img src="/assets/images/icons/GitHub-Mark-Light-32px.png" class="logo" alt="Github">
+      </a>
+      <a href="https://twitter.com/PickschoolMemes">
+        <img src="/assets/images/icons/TWITTER_icon-icons.com_65536.png" class="logo" alt="Twitter">
+      </a>
+      <a href="https://www.instagram.com/pickeringtonschoolmemes/">
+        <img src="/assets/images/icons/INSTAGRAM_icon-icons.com_65535.png" class="logo" alt="Instagram">
+      </a>
+    </footer>
   </div>
 </body>
 
