--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
       </p>
     </div>
     
-    <!-- <p>If you would like to sign the letter leave your name here.<br></p>
+    <p>If you would like to sign the letter leave your name here.<br></p>
     <form method="POST" action="/assets/pages/php/submit.php">
       <div class="form_name">
         <input type="text" name="StudentName" placeholder="Your first and last name">
         <input type="submit" name="" value="submit">
       </div>
-    </form> -->
+    </form>
 
 
   </center>
