added in a post

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+  <ul>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/posts/index.html">Posts</a></li>
+    <li><a href="/assets/pages/contact.html">Contact</a></li>
+    <li><a href="/assets/pages/about.html">About</a></li>
+  </ul>
+
+
   <center>
     <h1>An open letter to PLSD</h1>
   </center>
@@ -59,9 +67,8 @@
               mental health</a>
         </div>
       </span>
-      </p>
     </div>
-    
+
     <p>If you would like to sign the letter leave your name here.<br></p>
     <form method="POST" action="/assets/pages/php/submit.php">
       <div class="form_name">
@@ -87,5 +94,5 @@
     </footer>
   </div>
 </body>
-</html>
 
+</html>
