commting maybe the last update

--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -37,10 +37,12 @@
   <div class="row">
     <div class="column">
       <div class="card">
-        <!-- <img src="/w3images/team1.jpg" alt="Admin" style="width:100%"> -->
+        <img src="/assets/images/pictures/will.png" alt="will" style="width:100%">
         <div class="container">
-          <h2>Admin 1</h2>
+          <h2>Will</h2>
           <p class="title">Meme maker & Founder</p>
+          <p>Instagram - <a href="https://www.instagram.com/willthethrillsett/">@willthethrillsett</a></p>
+          <p>Twitter - <a href="https://twitter.com/wilthethrilsett">@wilthethrilsett</a></p>
           <p>admin@plsdschoolmeme.com</p>
           <a class="button" href="https://mail.google.com/mail/u/0/?fs=1&to=admin@plsdschoolmeme.com&tf=cm">Contact</a>
         </div>
@@ -49,10 +51,12 @@
   
     <div class="column">
       <div class="card">
-        <!-- <img src="/w3images/team2.jpg" alt="Admin" style="width:100%"> -->
+        <img src="/assets/images/pictures/ben.jpg" alt="ben" style="width:100%">
         <div class="container">
-          <h2>Admin 2</h2>
+          <h2>Ben</h2>
           <p class="title">Meme maker & Technology Admin</p>
+          <p>Instagram - <a href="https://www.instagram.com/isellbred/">@isellbred</a></p>
+          <p>Twitter - <a href="https://twitter.com/TIBTHINK">@TIBTHINK</a></p>
           <p>admin@plsdschoolmeme.com</p>
           <a class="button" href="https://mail.google.com/mail/u/0/?fs=1&to=admin@plsdschoolmeme.com&tf=cm">Contact</a>
         </div>
@@ -61,10 +65,12 @@
   
     <div class="column">
       <div class="card">
-        <!-- <img src="/w3images/team3.jpg" alt="Admin" style="width:100%"> -->
+        <img src="/assets/images/pictures/jake.jpg" alt="jake" style="width:100%">
         <div class="container">
-          <h2>Admin 3</h2>
+          <h2>Jake</h2>
           <p class="title">Meme maker</p>
+          <p>Instagram - <a href="https://www.instagram.com/jakob_spelled_with_a_k/">@jakob_spelled_with_a_k</a></p>
+          <p>Twitter - <a href="https://twitter.com/ak_jakob">@ak_jakob</a></p>
           <p>admin@plsdschoolmeme.com</p>
           <a class="button" href="https://mail.google.com/mail/u/0/?fs=1&to=admin@plsdschoolmeme.com&tf=cm">Contact</a>
         </div>
