--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -11,6 +11,8 @@
   
     <title>PLSD school meme</title>
     <link href="/assets/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/css/about.css" rel="stylesheet" type="text/css" />
+
     <link rel="shortcut icon" href="/assets/images/server-icon.png">
   
     <!-- 
